--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,15 +188,6 @@
  }
  
 
-/* body{
-  padding: 0 10%;
-  background-color: #111;
-  color: #FFF;
-  font-family: "Open Sans", sans-serif;
-  font-size: 2em;
-  line-height: 100vh;
-  white-space: nowrap;
-} */
 .blinking-cursor {
   user-select: none;
   animation: blink 1s steps(2, start) infinite;
@@ -208,13 +199,14 @@
 }
 
 .main-bottom{
-  padding: 70px 50px;
+  padding: 120px 50px 0;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   margin: 0 auto;
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 .main .main-left{
@@ -247,7 +239,7 @@
 
 .main .main-right{
   flex-basis: 30%;
-  padding: 90px 0;
+  text-align: right;
 }
 .main .main-right iframe{
   transform: translateX(-50px);
@@ -670,8 +662,9 @@
 } */
 @media (max-width:1160px) {
 
-  .header{
-    /* width: 100%; */
+  .main-bottom .main-left h1{
+    font-size: 5rem;
+    line-height: 70px;
   }
   
 }
