--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,41 +209,63 @@
   align-items: center;
   justify-content: space-between;
 }
-.main .main-left{
-  flex-basis: 70%;
+.main-left{
+  flex-basis: 50%;
 }
-.main .main-left h1{
+.main-left h1{
   font-size: 90px;
   line-height: 130px;
   color: var(--textColor);
+  /* position: relative; */
 }
-.main .main-left p{
+
+.main-left h1 span{
+  cursor: pointer;
+  position: relative;
+}
+.main-left h1 span::after{
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 3px;
+  width: 0%;
+  background: #000;
+  transition: all 0.4s ease;
+}
+.main-left h1 span:hover::after{
+  width: 100%;
+}
+
+.main-left p{
   width: 350px;
   color: var(--textColor);
 }
-.main .main-left button{
-  background: #82be90;
+.main-left button{
+  background: #82be90da;
+  backdrop-filter: blur(20px);
   padding: 25px 15px;
   border: none;
   border-radius: 20px;
   color: var(--textColor);
 }
-.main .main-left button i{
+.main-left button i{
   font-size: 18px;
   transform: translateY(10px);
   transition: 0.4s;
 }
-.main .main-left button:hover i{
+.main-left button:hover i{
   transform: translateY(20px);
 }
 
-.main .main-right{
-  flex-basis: 30%;
+.main-right{
+  flex-basis: 50%;
   text-align: right;
 }
-.main .main-right iframe{
-  transform: translateX(-50px);
-  border-radius: 200px;
+.main-right iframe{
+  border-radius: 50px;
+  width: 70%;
+  height: 180px;
 }
 
 /* .main .social-menu{
@@ -264,395 +286,7 @@
 } */
 
 
- .main .main-btn{
-   position: absolute;
-   bottom: 5%;
-   left: 50%;
-   background-image: var(--linearColor);
-   padding: 3px;
-   border-radius: 10px;
-   transition: 0.4s;
- }
- .main .main-btn:hover{
-  transform: rotate(90deg);
- }
- .main .main-btn a{
-   display: inline-block;
-   width: 20px;
-   height: 40px;
-   border: 3px solid #fff;
-   border-radius: 10px;
-   font-size: 20px;
-   color: #fff;
-   text-decoration: none;
-   text-align: center;
-   background: transparent;
-   transition: 0.4s;
- }
- .main .main-btn a:hover{
-   transform: translateY(20px);
- }
- /* 03. Main-bottom */
- #main-bottom{
-   width: 100%;
-   height: 100vh;
-   background-color: #000000;
-   display: grid;
-   grid-template-columns: 50% 50%;
- }
- #main-bottom .item{
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
- }
  
-
-#main-bottom .item h1{
-   color: var(--textColor);
-   z-index: 2;
-}
-#main-bottom .item a{
-   text-decoration: none;
-   color: var(--textColor);
-}
-
- #main-bottom .item:nth-child(1){
-   background-color: #ff3c00bb;
- }
- #main-bottom .item:nth-child(2){
-   background-color: #2f00ffbb;
- }
- #main-bottom .item:nth-child(3){
-   background-color: #0bf016bb;
- }
- #main-bottom .item:nth-child(4){
-   background-color: #ffee00bb;
- }
-
- #main-bottom{
-   position: relative!important;
- }
-
-/* 0301. About */
- #about{
-   display: none;
-   position: absolute;
-   top: 0%;
-   left: 0%;
-   background: #000000d8;
-   width: 100%;
-   height: 100vh;
-   z-index: 5;
-   color: var(--textColor);
-   overflow: scroll;
-   padding: 50px;
-   text-align: center;
- }
- #about i{
-   position: absolute;
-   top: 40px;
-   right: 40px;
-   font-size: 48px;
- }
-
- #about h1{
-  font-size: 48px;
-  margin-bottom: 10px;
- }
-
- #about .about-inner{
-   margin: 20px;
-   height: 800px;
-   display: grid;
-   grid-template-areas:'text img' 'animation animation';
-   grid-column-gap:50px;
-   grid-template-rows: 100% 100%;
-   position: relative;
- }
-
- #about .about-inner .about-inner-text{
-  grid-area: text;
- }
-
- #about .about-inner .about-inner-text p{
-  text-align: justify;
- }
- #about .about-inner .about-inner-text p span{
-  color: red;
-  text-decoration: underline;
- }
- #about .about-inner .about-inner-text ul{
-  text-align: left;
-  margin-left: 50px;
- }
-
- #about .about-inner .about-inner-img{
-  grid-area: img;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
- }
-
-
- /* 0302. Education And Experience */
- #eduexe{
-  display: none;
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  background: #000000d8;
-  width: 100%;
-  height: 100vh;
-  z-index: 5;
-  color: var(--textColor);
-  overflow: scroll;
-  padding: 50px;
-  text-align: center;
-}
-#eduexe i{
-  position: absolute;
-  top: 40px;
-  right: 40px;
-  font-size: 48px;
-}
-
-#eduexe h1{
- font-size: 48px;
- margin-bottom: 10px;
-}
-
-.eduexe-inner{
-  margin-top: 50px;
-  display: flex;
-  justify-content: space-between;
-}
-.eduexe-inner-left{
-  display: flex;
-  flex-direction: column;
-}
-.eduexe-inner-left a{
-  margin: 20px 0;
-  padding: 5px 10px;
-  text-align: left;
-  transition: 0.4s; 
-}
-.eduexe-inner-left a:hover{
-  border-right: 2px solid #fff;
-}
-
-.eduexe-inner-right{
-  flex-basis: 70%;
-  padding: 0 40px;
-}
-.eduexe-inner-right .exe{
-  text-align: left;
-}
-.eduexe-inner-right .exe h2{
-  color: var(--btnBorderColor);
-}
-
-.eduexe-inner-right .exe div{
-  padding: 20px 0;
-}
-.eduexe-inner-right .exe div h3,h4,p{
-  padding: 10px 0;
-}
-
-.eduexe-inner-right .edu{
-  display: none;
-  text-align: left;
-}
-.eduexe-inner-right .edu h2{
-  color: var(--btnBorderColor);
-}
-
-.eduexe-inner-right .edu div{
-  padding: 20px 0;
-}
-.eduexe-inner-right .edu div h3,h4,p{padding: 10px 0;}
-
-.eduexe-inner-right .work{
-  display: none;
-  text-align: left;
-}
-.eduexe-inner-right .work h2{
-  color: var(--btnBorderColor);
-}
-
-.eduexe-inner-right .work div{
-  padding: 20px 0;
-}
-.eduexe-inner-right .work div h3,h4,p{padding: 10px 0;}
-
- /* 0303. Skills */
- #skill{
-  display: none;
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  background: #000000d8;
-  width: 100%;
-  height: 100vh;
-  z-index: 5;
-  color: var(--textColor);
-  overflow: scroll;
-  padding: 50px;
-  text-align: center;
-}
-#skill i{
-  position: absolute;
-  top: 40px;
-  right: 40px;
-  font-size: 48px;
-}
-
-#skill h1{
- font-size: 48px;
- margin-bottom: 10px;
-}
-
-.skill-inner{
-  display: grid;
-  grid-template-columns: 20% 70%;
-  grid-template-rows: 20%;
-  grid-column-gap: 10%;
-  grid-row-gap: 10%;
-}
-.skill-inner .skill-item{
-  text-align: left;
-}
-.skill-inner .skill-item progress{
-  width: 100%;
-}
-
- /* 0304. Contact */
- #contact{
-  display: none;
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  background: #000000d8;
-  width: 100%;
-  height: 100vh;
-  z-index: 5;
-  color: var(--textColor);
-  overflow: scroll;
-  padding: 50px;
-  text-align: center;
-}
-#contact i{
-  position: absolute;
-  top: 40px;
-  right: 40px;
-  font-size: 48px;
-}
-
-#contact h1{
- font-size: 48px;
- margin-bottom: 10px;
-}
-
-.contact-inner{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
-  position: relative;
-}
-.contact-inner .contact-form{
-  flex-basis: 50%;
-  display: flex;
-  flex-direction: column;
-}
-.contact-inner .contact-form input, textarea{
-  flex-basis: 100%;
-  font-size: 18px;
-  padding: 5px;
-  margin-bottom: 20px;
-}
-.contact-inner .contact-form button{
-  font-size: 18px;
-  padding: 10px 20px;
-  border-radius: 5px;
-  width: 150px;
-  border: 3px solid var(--btnBorderColor);
-  color: var(--textColor);
-  background: transparent;
-  transition: 0.4s;
-}
-.contact-inner .contact-form button:hover{
-  background: var(--btnBorderColor);
-  color: var(--bgColor);
-}
-
-.contact-inner .contact-social-menu{
-  position: absolute;
-  bottom: 0px;
-  left: 90px;
-}
-.contact-inner .contact-social-menu a{
-  display: inline-block;
-  transition: 0.4s;
-}
-.contact-inner .contact-social-menu a:nth-child(1) i{
-  transform: translateX(-45px);
-}
-.contact-inner .contact-social-menu a:nth-child(2) i{
-  transform: translateX(30px);
-  display: none;
-}
-.contact-inner .contact-social-menu a:nth-child(3) i{
-  transform: translateX(90px);
-  display: none;
-}
-.contact-inner .contact-social-menu a:nth-child(4) i{
-  transform: translateX(150px);
-  display: none;
-}
-.contact-inner .contact-social-menu a:nth-child(5) i{
-  transform: translateX(220px);
-  display: none;
-}
-.contact-inner .contact-social-menu a:nth-child(6) i{
-  transform: translateX(-45px);
-  display: none;
-}
-
-.contact-inner .contact-social-menu a i{
-  transition: 0.4s;
-}
-
-
-.contact-inner .contact-social-menu a:nth-child(2) i:hover {
-  color: #0e8ff2;
-}
-.contact-inner .contact-social-menu a:nth-child(3) i:hover {
-  color: #634bc6;
-}
-.contact-inner .contact-social-menu a:nth-child(4) i:hover {
-  color: #0073b2;
-}
-.contact-inner .contact-social-menu a:nth-child(5) i:hover {
-  color: #fd0000;
-}
-
-
-.contact-address{
-  flex-basis: 40%;
-  margin-top: 200px;
-  
-  text-align: left;
-}
-.contact-address i{
-  font-size: 20px!important;
-  text-transform: capitalize!important;
-}
-.contact-address i:nth-child(2){
-  margin-top: 28px;
-}
-
 
 /* Responsive */
 /* @media (max-width:1212px) {
@@ -662,81 +296,26 @@
 } */
 @media (max-width:1160px) {
 
-  .main-bottom .main-left h1{
+  .main-left h1{
     font-size: 5rem;
     line-height: 70px;
   }
   
 }
-@media (max-width:1020px) {
 
-  /* .main-bottom .main-left{
-    flex-basis: 40%;
-    transform: translateX(80px);
-  }
-
-   .main-bottom .main-left h1{
-    font-size: 62px;
-    line-height: 60px;
-   }
-   .main-bottom .main-left p{
-    font-size: 14px;
-    width: 100%;
-   }
-
-   .main .main-right{
-    flex-basis: 40%;
-    padding: 20px 0;
-  }
-  .main .main-right iframe{
-    width: 430px;
-    height: 280px;
-    transform: translateX(-80px);
-  } */
-}
 @media (max-width:960px) {
-  /* .main-bottom{
-    max-width: 100%;
-  }
-  .main-bottom .main-left{
-    flex-basis: 30%;
-    transform: translateX(80px);
-  }
-  .main-bottom .main-left h1{
-    font-size: 40px;
-    line-height: 40px;
-   }
-   .main-bottom .main-left p{
-    font-size: 13px;
-   }
-
-   .main .main-right iframe{
-    width: 380px;
-    height: 210px;
-  } */
-
-}
-@media (max-width:900px) {
-  .main-menu{
-    /* width: 70%; */
-   }
   
-  #about .about-inner{
-    display: flex;
-    flex-direction: column-reverse;
-  }
+  
+  .main-left h1{
+    font-size: 3rem;
+    line-height: 40px;
+   } 
+   .main-left p{
+    font-size: .9rem;
+   }
+
 }
 
-@media (max-width:800px) {
-  .main .main-right iframe{
-    width: 350px;
-    height: 210px;
-    transform: translateX(-50px);
-  }
-  .contact-inner{
-    flex-direction: column-reverse;
-  }
-}
 
 @media (max-width:720px) {
 
@@ -775,70 +354,28 @@
     font-size: 1rem;
   }
 
-  .main-bottom .main-left h1{
-    font-size: 38px;
-    line-height: 30px;
-   }
-   .main-bottom .main-left p{
-    font-size: 11px;
+  .main-left h1{
+    
    }
 
   .main .main-right iframe{
-    width: 320px;
-    height: 190px;
-    transform: translateX(-40px);
-  }
-  .contact-inner{
-    flex-direction: column-reverse;
+    width: 100%;
+    
   }
 }
 @media (max-width:648px) {
 
-  .main-bottom .main-left h1{
-    font-size: 32px;
-    line-height: 30px;
-   }
-   .main-bottom .main-left p{
-    font-size: 9px;
-   }
-
-  .main .main-right iframe{
-    width: 300px;
-    height: 170px;
-  }
-  .contact-inner{
-    flex-direction: column-reverse;
-  }
-}
-@media (max-width:600px) {
-
   .main-bottom{
     flex-direction: column;
+  }
+  .main-left,
+  .main-right{
+    flex-basis: 100%;
     text-align: center;
   }
-  .main-bottom .main-left{
-    flex-basis: 100%;
-    transform: translateX(0px);
-  }
-  .main-bottom .main-left p{
-    width: 50%;
-    margin: 0 auto;
-  }
-  .main .main-left button{
-    padding: 15px 5px;
-  }
-  .main .main-left button i{
-    font-size: 14px;
-    transform: translateY(5px);
-  }
-
-  .main-bottom .main-right{
-    flex-basis: 100%;
-  }
-  .main-bottom .main-right iframe{
-    transform: translateX(0px);
-  }
+  
 }
+
 
 @media (max-width:560px) {
   .main-menu{
